--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     volumes:
       - "./nginx.conf:/etc/nginx/nginx.conf"
     networks:
-      dev
+      - dev
 
   frontend:
     build:
       context: .
     networks:
-      dev
+      - dev
